# mapbox-android

./: .gitignore  build.gradle  gradle.properties  settings.gradle
WheelPicker/: build.gradle
app/: build.gradle  cadskey.jks  google-services.json  proguard-rules.txt
app/debug/: output.json
app/release/: output.json
app/signature/: cadskeypkcs12.jks
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
metabits.service.lib.ver7/: CMakeLists.txt  build.gradle  dependencies.gradle  filesource_files.cmake  mbgl_core_files.cmake
metabits.service.lib.ver7/src/main/: AndroidManifest.xml
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxcore/location/: AndroidLocationEngineImpl.java  GoogleLocationEngineImpl.java  LocationEngine.java  LocationEngineCallback.java  LocationEngineImpl.java  LocationEngineListener.java  LocationEngineProvider.java  LocationEngineProxy.java  LocationEngineRequest.java  LocationEngineResult.java  MapboxFusedLocationEngineImpl.java  Utils.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxcore/permissions/: PermissionsListener.java  PermissionsManager.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/: BuildConfig.java  LibraryLoader.java  Mapbox.java  MapboxAccountManager.java  MarkerType.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/annotations/: BaseMarkerOptions.java  BubbleLayout.java  BubblePopupHelper.java  IconFactory.java  InfoWindow.java  Marker.java  MarkerOptions.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/attribution/: AttributionParser.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/camera/: CameraPosition.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/constants/: MapboxConstants.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/location/: LayerBitmapProvider.java  LocationAnimatorCoordinator.java  LocationCameraController.java  LocationComponent.java  LocationComponentActivationOptions.java  LocationComponentOptions.java  LocationLayerController.java  Utils.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/maps/: AnnotationManager.java  AttributionDialogManager.java  MapGestureDetector.java  MapView.java  MapboxMap.java  MapboxMapOptions.java  NativeMapView.java  Style.java  UiSettings.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/maps/renderer/: MapRenderer.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/maps/renderer/glsurfaceview/: GLSurfaceViewMapRenderer.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/maps/renderer/textureview/: TextureViewMapRenderer.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/module/http/: HttpRequestImpl.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/module/telemetry/: MapEventFactory.java  MapState.java  OfflineDownloadEndEvent.java  TelemetryImpl.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/offline/: OfflineManager.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/snapshotter/: MapSnapshotter.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/storage/: FileSource.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/style/layers/: Property.java  PropertyFactory.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/telemetry/: MapboxEventManager.java  TelemetryService.java
metabits.service.lib.ver7/src/main/java/com/mapbox/mapboxsdk/utils/: ColorUtils.java
metabits.service.lib.ver7/src/main/java/kr/co/geosoft/metabits/: MLog.java  MapActivity.java  MapboxBridge.java
metabits.service.lib.ver7/src/main/jni/core/mbgl/annotation/: annotation_manager.cpp  annotation_manager.hpp  line_annotation_impl.cpp
metabits.service.lib.ver7/src/main/jni/core/mbgl/renderer/: image_atlas.cpp  image_atlas.hpp  image_manager.hpp  tile_pyramid.cpp
metabits.service.lib.ver7/src/main/jni/core/mbgl/style/: style_impl.cpp
metabits.service.lib.ver7/src/main/jni/core/mbgl/text/: glyph_atlas.cpp  glyph_atlas.hpp
metabits.service.lib.ver7/src/main/jni/core/mbgl/tile/: tile_loader_impl.hpp
metabits.service.lib.ver7/src/main/jni/core/mbgl/util/: mapbox.cpp  version.cpp
metabits.service.lib.ver7/src/main/jni/include/mbgl/util/: constants.hpp
metabits.service.lib.ver7/src/main/jni/platform/android/src/: test.cpp
metabits.service.lib.ver7/src/main/jni/platform/android/src/gson/: json_element.cpp
metabits.service.lib.ver7/src/main/jni/platform/default/: default_file_source.cpp
metabits.service.lib.ver7/src/main/res/layout/: activity_map.xml  mapbox_infowindow_content_web.xml  mapbox_mapview_internal.xml
metabits.service.lib.ver7/src/main/res/values/: dimens.xml  strings.xml  styles.xml
(+49 files in other folders)
